--- a/NettyTest/pom.xml
+++ b/NettyTest/pom.xml
@@ -57,5 +57,10 @@
 			<version>1.6.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency>
 	</dependencies>
 </project>
