--- a/NettyTest/pom.xml
+++ b/NettyTest/pom.xml
@@ -58,6 +58,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.alibaba.rocketmq</groupId>
+			<artifactId>rocketmq-all</artifactId>
+			<version>3.4.9</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.7</version>
